--- a/INF8225_TP3_2025.ipynb
+++ b/INF8225_TP3_2025.ipynb
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {
     "id": "2d-ukpIOu_RH"
    },
@@ -1247,23 +1247,29 @@
     "            d_ff: int,\n",
     "            nhead: int,\n",
     "            dropout: float,\n",
-    "            normcls = nn.LayerNorm\n",
+    "            normclspre = nn.LayerNorm,\n",
+    "            normclspost = nn.LayerNorm,\n",
+    "            normpos = 'after'\n",
     "        ):\n",
     "        super().__init__()\n",
     "\n",
-    "        # TODO\n",
+    "        assert normpos in ['before', 'after', 'both'], \"normpos must be 'before', 'after' or 'both'.\"\n",
+    "\n",
     "        self.d_model = d_model\n",
     "        self.d_ff = d_ff\n",
     "        self.nhead = nhead\n",
     "\n",
     "        self.selfattn = MultiheadAttention(d_model, nhead, dropout)\n",
-    "        self.normselfattn = normcls(d_model)\n",
+    "        self.normselfattnpre = normclspre(d_model)\n",
+    "        self.normselfattnpost = normclspost(d_model)\n",
     "        self.crossattn = MultiheadAttention(d_model, nhead, dropout)\n",
-    "        self.normcrossattn = normcls(d_model)\n",
+    "        self.normcrossattnpre = normclspre(d_model)\n",
+    "        self.normcrossattnpost = normclspost(d_model)\n",
     "        self.ff1 = nn.Linear(d_model, d_ff)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        self.ff2 = nn.Linear(d_ff, d_model)\n",
-    "        self.normff = normcls(d_model)\n",
+    "        self.normffpre = normclspre(d_model)\n",
+    "        self.normffpost = normclspro(d_model)\n",
     "\n",
     "    def forward(\n",
     "            self,\n",
@@ -1293,13 +1299,21 @@
     "            y:  Batch of sequence of embeddings representing the predicted target tokens\n",
     "                Shape of [batch_size, tgt_seq_len, dim_model].\n",
     "        \"\"\"\n",
-    "        # TODO\n",
+    "        if normpos in ['before', 'both']:\n",
+    "          tgt = self.normselfattnpre(tgt)\n",
     "        tgt = tgt + self.selfattn(tgt, tgt, tgt, tgt_key_padding_mask, tgt_mask_attn)\n",
-    "        tgt = self.normselfattn(tgt)\n",
+    "        if normpos in ['after', 'both']:\n",
+    "            tgt = self.normselfattn(tgt)\n",
+    "        if normpos in ['before', 'both']:\n",
+    "            tgt = self.normcrossattnpre(tgt)\n",
     "        tgt = tgt + self.crossattn(tgt, src, src, src_key_padding_mask, None)\n",
-    "        tgt = self.normcrossattn(tgt)\n",
+    "        if normpos in ['after', 'both']:\n",
+    "            tgt = self.normcrossattnpost(tgt)\n",
+    "        if normpos in ['before', 'both']:\n",
+    "            tgt = self.normffpre(tgt)\n",
     "        tgt = tgt + self.ff2(self.dropout(self.ff1(tgt)))\n",
-    "        tgt = self.normff(tgt)\n",
+    "        if normpos in ['after', 'both']:\n",
+    "            tgt = self.normffpost(tgt)\n",
     "        return tgt\n",
     "\n",
     "\n",
@@ -1322,14 +1336,15 @@
     "            num_decoder_layer:int ,\n",
     "            nhead: int,\n",
     "            dropout: float,\n",
-    "            normcls = nn.LayerNorm\n",
+    "            normclspre = nn.LayerNorm,\n",
+    "            normclspost = nn.LayerNorm,\n",
+    "            normpos = 'after'\n",
     "        ):\n",
     "        super().__init__()\n",
     "\n",
-    "        # TODO\n",
     "        self.layers = nn.ModuleList()\n",
     "        for i in range(num_decoder_layer):\n",
-    "          self.layers.append(TransformerDecoderLayer(d_model,d_ff,nhead,dropout,normcls))\n",
+    "          self.layers.append(TransformerDecoderLayer(d_model,d_ff,nhead,dropout,normclspre,normclspost,normpos))\n",
     "\n",
     "    def forward(\n",
     "            self,\n",
@@ -1360,7 +1375,6 @@
     "            y:  Batch of sequence of embeddings representing the predicted target tokens\n",
     "                Shape of [batch_size, tgt_seq_len, dim_model].\n",
     "        \"\"\"\n",
-    "        # TODO\n",
     "        for layer in self.layers:\n",
     "          tgt = layer(src, tgt, tgt_mask_attn, src_key_padding_mask, tgt_key_padding_mask)\n",
     "        return tgt\n",
@@ -1382,21 +1396,26 @@
     "            d_ff: int,\n",
     "            nhead: int,\n",
     "            dropout: float,\n",
-    "            normcls = nn.LayerNorm\n",
+    "            normclspre = nn.LayerNorm,\n",
+    "            normclspost = nn.LayerNorm,\n",
+    "            normpos = 'after'\n",
     "        ):\n",
     "        super().__init__()\n",
     "\n",
-    "        # TODO\n",
+    "        assert normpos in ['before', 'after', 'both'], \"normpos must be 'before', 'after' or 'both'.\"\n",
+    "\n",
     "        self.d_model = d_model\n",
     "        self.d_ff = d_ff\n",
     "        self.nhead = nhead\n",
     "\n",
     "        self.selfattn = MultiheadAttention(d_model, nhead, dropout)\n",
-    "        self.normselfattn = normcls(d_model)\n",
+    "        self.normselfattnpre = normclspre(d_model)\n",
+    "        self.normselfattnpost = normclspost(d_model)\n",
     "        self.ff1 = nn.Linear(d_model, d_ff)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        self.ff2 = nn.Linear(d_ff, d_model)\n",
-    "        self.normff = normcls(d_model)\n",
+    "        self.normffpre = normclspre(d_model)\n",
+    "        self.normffpost = normclspost(d_model)\n",
     "\n",
     "    def forward(\n",
     "        self,\n",
@@ -1417,11 +1436,16 @@
     "            y: Batch of encoded source tokens.\n",
     "                Shape of [batch_size, src_seq_len, dim_model].\n",
     "        \"\"\"\n",
-    "        # TODO\n",
+    "        if normpos in ['before', 'both']:\n",
+    "          src = self.normselfattnpre(src)\n",
     "        src = src + self.selfattn(src, src, src, key_padding_mask)\n",
-    "        src = self.normselfattn(src)\n",
+    "        if normpos in ['after', 'both']:\n",
+    "            src = self.normselfattnpost(src)\n",
+    "        if normpos in ['before', 'both']:\n",
+    "            src = self.normffpre(src)\n",
     "        src = src + self.ff2(self.dropout(self.ff1(src)))\n",
-    "        src = self.normff(src)\n",
+    "        if normpos in ['after', 'both']:\n",
+    "            src = self.normffpost(src)\n",
     "        return src\n",
     "\n",
     "\n",
@@ -1444,14 +1468,15 @@
     "            num_encoder_layers: int,\n",
     "            nheads: int,\n",
     "            dropout: float,\n",
-    "            normcls = nn.LayerNorm\n",
+    "            normclspre = nn.LayerNorm,\n",
+    "            normclspost = nn.LayerNorm,\n",
+    "            normpos = 'after'\n",
     "        ):\n",
     "        super().__init__()\n",
     "\n",
-    "        # TODO\n",
     "        self.layers = nn.ModuleList()\n",
     "        for i in range(num_encoder_layers):\n",
-    "          self.layers.append(TransformerEncoderLayer(d_model,dim_feedforward,nheads,dropout,normcls))\n",
+    "          self.layers.append(TransformerEncoderLayer(d_model,dim_feedforward,nheads,dropout,normclspre,normclspost,normpos))\n",
     "\n",
     "\n",
     "    def forward(\n",
@@ -1474,7 +1499,6 @@
     "            y: Batch of encoded source sequence.\n",
     "                Shape of [batch_size, src_seq_len, dim_model].\n",
     "        \"\"\"\n",
-    "        # TODO\n",
     "        for layer in self.layers:\n",
     "          tgt = layer(src, key_padding_mask)\n",
     "        return tgt"
