--- a/INF8225_TP3_2025.ipynb
+++ b/INF8225_TP3_2025.ipynb
@@ -1249,11 +1249,8 @@
     "            dropout: float,\n",
     "            normclspre = nn.LayerNorm,\n",
     "            normclspost = nn.LayerNorm,\n",
-    "            normpos = 'after'\n",
     "        ):\n",
     "        super().__init__()\n",
-    "\n",
-    "        assert normpos in ['before', 'after', 'both'], \"normpos must be 'before', 'after' or 'both'.\"\n",
     "\n",
     "        self.d_model = d_model\n",
     "        self.d_ff = d_ff\n",
@@ -1299,21 +1296,20 @@
     "            y:  Batch of sequence of embeddings representing the predicted target tokens\n",
     "                Shape of [batch_size, tgt_seq_len, dim_model].\n",
     "        \"\"\"\n",
-    "        if normpos in ['before', 'both']:\n",
-    "          tgt = self.normselfattnpre(tgt)\n",
-    "        tgt = tgt + self.selfattn(tgt, tgt, tgt, tgt_key_padding_mask, tgt_mask_attn)\n",
-    "        if normpos in ['after', 'both']:\n",
-    "            tgt = self.normselfattn(tgt)\n",
-    "        if normpos in ['before', 'both']:\n",
-    "            tgt = self.normcrossattnpre(tgt)\n",
-    "        tgt = tgt + self.crossattn(tgt, src, src, src_key_padding_mask, None)\n",
-    "        if normpos in ['after', 'both']:\n",
-    "            tgt = self.normcrossattnpost(tgt)\n",
-    "        if normpos in ['before', 'both']:\n",
-    "            tgt = self.normffpre(tgt)\n",
-    "        tgt = tgt + self.ff2(self.dropout(self.ff1(tgt)))\n",
-    "        if normpos in ['after', 'both']:\n",
-    "            tgt = self.normffpost(tgt)\n",
+    "        skip = tgt.copy()\n",
+    "        tgt = self.normselfattnpre(tgt)\n",
+    "        tgt = skip + self.selfattn(tgt, tgt, tgt, tgt_key_padding_mask, tgt_mask_attn)\n",
+    "        tgt = self.normselfattnpost(tgt)\n",
+    "\n",
+    "        skip = tgt.copy()\n",
+    "        tgt = self.normcrossattnpre(tgt)\n",
+    "        tgt = skip + self.crossattn(tgt, src, src, src_key_padding_mask, None)\n",
+    "        tgt = self.normcrossattnpost(tgt)\n",
+    "        \n",
+    "        skip = tgt.copy()\n",
+    "        tgt = self.normffpre(tgt)\n",
+    "        tgt = skip + self.ff2(self.dropout(self.ff1(tgt)))\n",
+    "        tgt = self.normffpost(tgt)\n",
     "        return tgt\n",
     "\n",
     "\n",
@@ -1338,13 +1334,12 @@
     "            dropout: float,\n",
     "            normclspre = nn.LayerNorm,\n",
     "            normclspost = nn.LayerNorm,\n",
-    "            normpos = 'after'\n",
     "        ):\n",
     "        super().__init__()\n",
     "\n",
     "        self.layers = nn.ModuleList()\n",
     "        for i in range(num_decoder_layer):\n",
-    "          self.layers.append(TransformerDecoderLayer(d_model,d_ff,nhead,dropout,normclspre,normclspost,normpos))\n",
+    "          self.layers.append(TransformerDecoderLayer(d_model,d_ff,nhead,dropout,normclspre,normclspost))\n",
     "\n",
     "    def forward(\n",
     "            self,\n",
@@ -1398,11 +1393,8 @@
     "            dropout: float,\n",
     "            normclspre = nn.LayerNorm,\n",
     "            normclspost = nn.LayerNorm,\n",
-    "            normpos = 'after'\n",
     "        ):\n",
     "        super().__init__()\n",
-    "\n",
-    "        assert normpos in ['before', 'after', 'both'], \"normpos must be 'before', 'after' or 'both'.\"\n",
     "\n",
     "        self.d_model = d_model\n",
     "        self.d_ff = d_ff\n",
@@ -1436,16 +1428,15 @@
     "            y: Batch of encoded source tokens.\n",
     "                Shape of [batch_size, src_seq_len, dim_model].\n",
     "        \"\"\"\n",
-    "        if normpos in ['before', 'both']:\n",
-    "          src = self.normselfattnpre(src)\n",
-    "        src = src + self.selfattn(src, src, src, key_padding_mask)\n",
-    "        if normpos in ['after', 'both']:\n",
-    "            src = self.normselfattnpost(src)\n",
-    "        if normpos in ['before', 'both']:\n",
-    "            src = self.normffpre(src)\n",
-    "        src = src + self.ff2(self.dropout(self.ff1(src)))\n",
-    "        if normpos in ['after', 'both']:\n",
-    "            src = self.normffpost(src)\n",
+    "        skip = tgt.copy()\n",
+    "        tgt = self.normselfattnpre(tgt)\n",
+    "        tgt = skip + self.selfattn(tgt, tgt, tgt, tgt_key_padding_mask, tgt_mask_attn)\n",
+    "        tgt = self.normselfattnpost(tgt)\n",
+    "        \n",
+    "        skip = tgt.copy()\n",
+    "        tgt = self.normffpre(tgt)\n",
+    "        tgt = skip + self.ff2(self.dropout(self.ff1(tgt)))\n",
+    "        tgt = self.normffpost(tgt)\n",
     "        return src\n",
     "\n",
     "\n",
@@ -1470,13 +1461,12 @@
     "            dropout: float,\n",
     "            normclspre = nn.LayerNorm,\n",
     "            normclspost = nn.LayerNorm,\n",
-    "            normpos = 'after'\n",
     "        ):\n",
     "        super().__init__()\n",
     "\n",
     "        self.layers = nn.ModuleList()\n",
     "        for i in range(num_encoder_layers):\n",
-    "          self.layers.append(TransformerEncoderLayer(d_model,dim_feedforward,nheads,dropout,normclspre,normclspost,normpos))\n",
+    "          self.layers.append(TransformerEncoderLayer(d_model,dim_feedforward,nheads,dropout,normclspre,normclspost))\n",
     "\n",
     "\n",
     "    def forward(\n",
@@ -1557,12 +1547,13 @@
     "            num_decoder_layers: int,\n",
     "            dim_feedforward: int,\n",
     "            dropout: float,\n",
-    "            normcls = nn.LayerNorm\n",
+    "            normclspre = nn.LayerNorm,\n",
+    "            normclspost = nn.LayerNorm,\n",
     "        ):\n",
     "        super().__init__()\n",
     "        # TODO\n",
-    "        self.enc = TransformerEncoder(d_model, dim_feedforward, num_encoder_layers, nhead,dropout,normcls)\n",
-    "        self.dec = TransformerDecoder(d_model, dim_feedforward, num_encoder_layers, nhead,dropout,normcls)\n",
+    "        self.enc = TransformerEncoder(d_model, dim_feedforward, num_encoder_layers, nhead,dropout,normclspre, normclspost)\n",
+    "        self.dec = TransformerDecoder(d_model, dim_feedforward, num_encoder_layers, nhead,dropout,normclspre, normclspost)\n",
     "\n",
     "    def forward(\n",
     "            self,\n",
@@ -1627,7 +1618,8 @@
     "            dropout: float,\n",
     "            src_pad_idx: int,\n",
     "            tgt_pad_idx: int,\n",
-    "            normcls = nn.LayerNorm\n",
+    "            normclspre = nn.LayerNorm,\n",
+    "            normclspost = nn.LayerNorm,\n",
     "        ):\n",
     "        super().__init__()\n",
     "\n",
@@ -1636,7 +1628,7 @@
     "        self.tgt_pad_idx = tgt_pad_idx\n",
     "        self.srcemb = nn.Embedding(n_tokens_src, dim_embedding)\n",
     "        self.tgtemb = nn.Embedding(n_tokens_tgt, dim_embedding)\n",
-    "        self.tf = Transformer(dim_embedding, n_heads, n_layers,n_layers,dim_hidden,dropout,normcls)\n",
+    "        self.tf = Transformer(dim_embedding, n_heads, n_layers,n_layers,dim_hidden,dropout,normclspre, normclspost)\n",
     "        self.Wlogits = nn.Linear(dim_embedding, n_tokens_tgt)\n",
     "\n",
     "\n",
