--- a/INF8225_TP3_2025.ipynb
+++ b/INF8225_TP3_2025.ipynb
@@ -2030,22 +2030,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {
     "id": "AROf5iaVcC8r"
    },
    "outputs": [],
    "source": [
     "# From https://arxiv.org/abs/2503.10622\n",
-    "class DyT(nn.Module):\n",
-    "    def __init__(self, num_features, alpha_init_value=0.5):\n",
+    "class LeakyHardTanh(nn.Module):\n",
+    "    def __init__(self):\n",
     "        super().__init__()\n",
+    "        self.hardtanh = nn.HardTanh()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return 0.99*self.hardtanh(x) + 0.01 * x\n",
+    "\n",
+    "class DyT(nn.Module):\n",
+    "    def __init__(self, num_features, alpha_init_value=0.5, fc=torch.nn.Tanh):\n",
+    "        super().__init__()\n",
+    "        self.fc = fc\n",
     "        self.alpha = nn.Parameter(torch.ones(1) * alpha_init_value)\n",
     "        self.weight = nn.Parameter(torch.ones(num_features))\n",
     "        self.bias = nn.Parameter(torch.zeros(num_features))\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = torch.tanh(self.alpha * x)\n",
+    "        x = self.fc(self.alpha * x)\n",
     "        return x * self.weight + self.bias"
    ]
   },
@@ -2133,7 +2142,36 @@
     "    (\"LayernormPre\",  nn.LayerNorm, nn.Identity),\n",
     "    (\"RMSNormPre\",  RMSNorm, nn.Identity),\n",
     "    (\"Identity\",  nn.Identity, nn.Identity),\n",
-    "    (\"DyTPre\", DyT, nn.Identity)\n",
+    "    (\"DyTPre\", DyT, nn.Identity),\n",
+    "\n",
+    "    (\"BatchNormPost\",  nn.Identity, BatchNorm),\n",
+    "    (\"LayernormPost\",  nn.Identity, nn.LayerNorm),\n",
+    "    (\"RMSNormPost\",  nn.Identity, RMSNorm),\n",
+    "    (\"DyTPost\", nn.Identity, DyT),\n",
+    "\n",
+    "    (\"DyTPreAlpha=0.5\", lambda x:DyT(x, alpha=0.05), nn.Identity),\n",
+    "    (\"DyTPostAlpha=0.5\", nn.Identity, lambda x:DyT(x, aplha=0.05)),\n",
+    "\n",
+    "    (\"DyTPreHardTanh\", lambda x:DyT(x, fc=nn.HardTanh), nn.Identity),\n",
+    "    (\"DyTPostHardTanh\", nn.Identity, lambda x:DyT(x, fc=nn.HardTanh)),\n",
+    "    (\"DyTPreHardTanhAlpha=0.05\", lambda x:DyT(x, alpha=0.05, fc=nn.HardTanh), nn.Identity),\n",
+    "    (\"DyTPostHardTanhAlpha=0.05\", nn.Identity, lambda x:DyT(x, alpha=0.05, fc=nn.HardTanh)),\n",
+    "\n",
+    "    (\"DyTPreLeakyHardTanh\", lambda x:DyT(x, fc=LeakyHardTanh), nn.Identity),\n",
+    "    (\"DyTPostLeakyHardTanh\", nn.Identity, lambda x:DyT(x, fc=LeakyHardTanh)),\n",
+    "    (\"DyTPreLeakyHardTanhAlpha=0.05\", lambda x:DyT(x, alpha=0.05, fc=LeakyHardTanh), nn.Identity),\n",
+    "    (\"DyTPostLeakyHardTanhAlpha=0.05\", nn.Identity, lambda x:DyT(x, alpha=0.05, fc=LeakyHardTanh)),\n",
+    "\n",
+    "    (\"BatchNormBoth\",  BatchNorm, BatchNorm),\n",
+    "    (\"LayernormBoth\",  nn.LayerNorm, nn.LayerNorm),\n",
+    "    (\"RMSNormBoth\",  RMSNorm, RMSNorm),\n",
+    "    (\"DyTBoth\", DyT, DyT),\n",
+    "\n",
+    "    (\"DyTBothAlpha=0.5\", lambda x:DyT(x, alpha=0.05), lambda x:DyT(x, alpha=0.05)),\n",
+    "    (\"DyTBothHardTanh\", lambda x:DyT(x, fc=nn.HardTanh), lambda x:DyT(x, fc=nn.HardTanh)),\n",
+    "    (\"DyTBothHardTanhAlpha=0.05\", lambda x:DyT(x, alpha=0.05, fc=nn.HardTanh),lambda x:DyT(x, alpha=0.05, fc=nn.HardTanh)),\n",
+    "    (\"DyTBothLeakyHardTanh\", lambda x:DyT(x, fc=LeakyHardTanh), lambda x:DyT(x, fc=LeakyHardTanh)),\n",
+    "    (\"DyTBothLeakyHardTanhAlpha=0.05\", lambda x:DyT(x, alpha=0.05, fc=LeakyHardTanh), lambda x:DyT(x, alpha=0.05, fc=LeakyHardTanh)),\n",
     "]"
    ]
   },
