--- a/INF8225_TP3_2025.ipynb
+++ b/INF8225_TP3_2025.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -121,7 +121,6 @@
     "!python3 -m spacy download fr > /dev/null\n",
     "!pip install torchinfo > /dev/null\n",
     "!pip install einops > /dev/null\n",
-    "!pip install wandb > /dev/null\n",
     "\n"
    ]
   },
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -209,7 +208,6 @@
     "from torchtext.datasets import IWSLT2016\n",
     "\n",
     "import einops\n",
-    "import wandb\n",
     "from torchinfo import summary\n",
     "\n",
     "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n"
@@ -1527,13 +1525,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "id": "h2I1C8pRXN8j"
    },
    "outputs": [],
    "source": [
-    "def print_logs(dataset_type: str, logs: dict):\n",
+    "def print_logs(dataset_type: str, logs: dict, file):\n",
     "    \"\"\"Print the logs.\n",
     "\n",
     "    Args\n",
@@ -1548,8 +1546,8 @@
     "    desc = '\\t'.join(desc)\n",
     "    desc = f'{dataset_type} -\\t' + desc\n",
     "    desc = desc.expandtabs(5)\n",
+    "    file.write(desc+\"\\n\")\n",
     "    print(desc)\n",
-    "\n",
     "\n",
     "def topk_accuracy(\n",
     "        real_tokens: torch.FloatTensor,\n",
@@ -1648,214 +1646,105 @@
     "        logs[name] = np.mean(values)\n",
     "    return logs\n",
     "\n",
-    "\n",
-    "def train_model(model: nn.Module, config: dict):\n",
+    "import pathlib\n",
+    "def train_model(model: nn.Module, config: dict, expname):\n",
     "    \"\"\"Train the model in a teacher forcing manner.\n",
     "    \"\"\"\n",
-    "    train_loader, val_loader = config['train_loader'], config['val_loader']\n",
-    "    train_dataset, val_dataset = train_loader.dataset.dataset, val_loader.dataset.dataset\n",
-    "    optimizer = config['optimizer']\n",
-    "    clip = config['clip']\n",
-    "    device = config['device']\n",
+    "    path = pathlib.Path(f\"./{expname}\")\n",
+    "    path.mkdir(exist_ok=True, parents=True)\n",
+    "    with open(path/f'training_logs.log', 'r') as logfile:\n",
+    "        train_loader, val_loader = config['train_loader'], config['val_loader']\n",
+    "        train_dataset, val_dataset = train_loader.dataset.dataset, val_loader.dataset.dataset\n",
+    "        optimizer = config['optimizer']\n",
+    "        clip = config['clip']\n",
+    "        device = config['device']\n",
     "\n",
-    "    columns = ['epoch']\n",
-    "    for mode in ['train', 'validation']:\n",
-    "        columns += [\n",
-    "            f'{mode} - {colname}'\n",
-    "            for colname in ['source', 'target', 'predicted', 'likelihood']\n",
-    "        ]\n",
-    "    log_table = wandb.Table(columns=columns)\n",
+    "        logfile.write(f'Starting training for {config[\"epochs\"]} epochs, using {device}.'+\"\\n\")\n",
+    "        print(f'Starting training for {config[\"epochs\"]} epochs, using {device}.')\n",
     "\n",
+    "        for e in range(config['epochs']):\n",
+    "            logfile.write(f\"starting epoch: {e}\\n\")\n",
+    "            print(f\"starting epoch: {e}\\n\")\n",
     "\n",
-    "    print(f'Starting training for {config[\"epochs\"]} epochs, using {device}.')\n",
-    "    for e in range(config['epochs']):\n",
-    "        print(f'\\nEpoch {e+1}')\n",
+    "            grads_moy = {}\n",
+    "            grads_epoch_start = {}\n",
+    "            avg_counter = 0\n",
     "\n",
-    "        model.to(device)\n",
-    "        model.train()\n",
-    "        logs = defaultdict(list)\n",
+    "            model.to(device)\n",
+    "            model.train()\n",
+    "            logs = defaultdict(list)\n",
     "\n",
-    "        for batch_id, (source, target) in enumerate(train_loader):\n",
-    "            optimizer.zero_grad()\n",
+    "            for batch_id, (source, target) in enumerate(train_loader):\n",
+    "                optimizer.zero_grad()\n",
     "\n",
-    "            metrics = loss_batch(model, source, target, config)\n",
-    "            loss = metrics['loss']\n",
+    "                metrics = loss_batch(model, source, target, config)\n",
+    "                loss = metrics['loss']\n",
     "\n",
-    "            loss.backward()\n",
-    "            torch.nn.utils.clip_grad_norm_(model.parameters(), clip)\n",
-    "            optimizer.step()\n",
+    "                loss.backward()\n",
+    "                torch.nn.utils.clip_grad_norm_(model.parameters(), clip)\n",
+    "                optimizer.step()\n",
     "\n",
-    "            for name, value in metrics.items():\n",
-    "                logs[name].append(value.cpu().item())  # Don't forget the '.item' to free the cuda memory\n",
+    "                for name, value in metrics.items():\n",
+    "                    logs[name].append(value.cpu().item())  # Don't forget the '.item' to free the cuda memory\n",
     "\n",
-    "            if batch_id % config['log_every'] == 0:\n",
+    "                if batch_id % config['log_every'] == 0:\n",
+    "                    for name, value in logs.items():\n",
+    "                        logs[name] = np.mean(value)\n",
+    "\n",
+    "                    train_logs = {\n",
+    "                        f'Train - {m}': v\n",
+    "                        for m, v in logs.items()\n",
+    "                    }\n",
+    "                    logs = defaultdict(list)\n",
+    "\n",
+    "                for name, param in enumerate(model.named_parameters()):\n",
+    "                    grads_moy[name] = grads_moy.get(name, 0) + param.grad.data.copy().cpu()\n",
+    "                    avg_counter += 1\n",
+    "                    if batch_id==0:\n",
+    "                        grads_epoch_start[name] = param.grad.data.copy().cpu()\n",
+    "\n",
+    "            \n",
+    "            for key in grads_moy:\n",
+    "                grads_moy[key] = grads_moy[key] / avg_counter\n",
+    "                    \n",
+    "            # Logs\n",
+    "            if len(logs) != 0:\n",
     "                for name, value in logs.items():\n",
     "                    logs[name] = np.mean(value)\n",
-    "\n",
     "                train_logs = {\n",
     "                    f'Train - {m}': v\n",
     "                    for m, v in logs.items()\n",
     "                }\n",
-    "                wandb.log(train_logs)\n",
-    "                logs = defaultdict(list)\n",
+    "            else:\n",
+    "                logs = {\n",
+    "                    m.split(' - ')[1]: v\n",
+    "                    for m, v in train_logs.items()\n",
+    "                }\n",
     "\n",
-    "        # Logs\n",
-    "        if len(logs) != 0:\n",
-    "            for name, value in logs.items():\n",
-    "                logs[name] = np.mean(value)\n",
-    "            train_logs = {\n",
-    "                f'Train - {m}': v\n",
-    "                for m, v in logs.items()\n",
-    "            }\n",
-    "        else:\n",
-    "            logs = {\n",
-    "                m.split(' - ')[1]: v\n",
-    "                for m, v in train_logs.items()\n",
-    "            }\n",
+    "            print_logs('Train', logs, logfile)\n",
     "\n",
-    "        print_logs('Train', logs)\n",
+    "            logs = eval_model(model, val_loader, config)\n",
+    "            print_logs('Eval', logs, logfile)\n",
     "\n",
-    "        logs = eval_model(model, val_loader, config)\n",
-    "        print_logs('Eval', logs)\n",
-    "        val_logs = {\n",
-    "            f'Validation - {m}': v\n",
-    "            for m, v in logs.items()\n",
-    "        }\n",
+    "            val_source, val_target = val_dataset[ torch.randint(len(val_dataset), (1,)) ]\n",
+    "            val_pred, val_prob = beam_search(\n",
+    "                model,\n",
+    "                val_source,\n",
+    "                config['src_vocab'],\n",
+    "                config['tgt_vocab'],\n",
+    "                config['src_tokenizer'],\n",
+    "                device,  # It can take a lot of VRAM\n",
+    "                beam_width=10,\n",
+    "                max_target=100,\n",
+    "                max_sentence_length=config['max_sequence_length'],\n",
+    "            )[0]\n",
+    "            logfile.write(val_source+\"\\n\")\n",
+    "            print(val_source)\n",
+    "            logfile.write(val_pred+\"\\n\")\n",
+    "            print(val_pred)\n",
     "\n",
-    "        val_source, val_target = val_dataset[ torch.randint(len(val_dataset), (1,)) ]\n",
-    "        val_pred, val_prob = beam_search(\n",
-    "            model,\n",
-    "            val_source,\n",
-    "            config['src_vocab'],\n",
-    "            config['tgt_vocab'],\n",
-    "            config['src_tokenizer'],\n",
-    "            device,  # It can take a lot of VRAM\n",
-    "            beam_width=10,\n",
-    "            max_target=100,\n",
-    "            max_sentence_length=config['max_sequence_length'],\n",
-    "        )[0]\n",
-    "        print(val_source)\n",
-    "        print(val_pred)\n",
-    "\n",
-    "        logs = {**train_logs, **val_logs}  # Merge dictionnaries\n",
-    "        wandb.log(logs)  # Upload to the WandB cloud\n",
-    "\n",
-    "        # Table logs\n",
-    "        train_source, train_target = train_dataset[ torch.randint(len(train_dataset), (1,)) ]\n",
-    "        train_pred, train_prob = beam_search(\n",
-    "            model,\n",
-    "            train_source,\n",
-    "            config['src_vocab'],\n",
-    "            config['tgt_vocab'],\n",
-    "            config['src_tokenizer'],\n",
-    "            device,  # It can take a lot of VRAM\n",
-    "            beam_width=10,\n",
-    "            max_target=100,\n",
-    "            max_sentence_length=config['max_sequence_length'],\n",
-    "        )[0]\n",
-    "\n",
-    "        data = [\n",
-    "            e + 1,\n",
-    "            train_source, train_target, train_pred, train_prob,\n",
-    "            val_source, val_target, val_pred, val_prob,\n",
-    "        ]\n",
-    "        log_table.add_data(*data)\n",
-    "\n",
-    "    # Log the table at the end of the training\n",
-    "    wandb.log({'Model predictions': log_table})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "YImgxCWjlWni"
-   },
-   "source": [
-    "# Training the models\n",
-    "We can now finally train the models.\n",
-    "Choose the right hyperparameters, play with them and try to find\n",
-    "ones that lead to good models and good training curves.\n",
-    "Try to reach a loss under 1.0.\n",
-    "\n",
-    "So you know, it is possible to get descent results with approximately 20 epochs.\n",
-    "With CUDA enabled, one epoch, even on a big model with a big dataset, shouldn't last more than 10 minutes.\n",
-    "A normal epoch is between 1 to 5 minutes.\n",
-    "\n",
-    "*This is considering Colab Pro, we should try using free Colab to get better estimations.*\n",
-    "\n",
-    "---\n",
-    "\n",
-    "To test your implementations, it is easier to try your models\n",
-    "in a CPU instance. Indeed, Colab reduces your GPU instances priority\n",
-    "with the time you recently past using GPU instances. It would be\n",
-    "sad to consume all your GPU time on implementation testing.\n",
-    "Moreover, you should try your models on small datasets and with a small number of parameters.\n",
-    "For exemple, you could set:\n",
-    "```\n",
-    "MAX_SEQ_LEN = 10\n",
-    "MIN_TOK_FREQ = 20\n",
-    "dim_embedding = 40\n",
-    "dim_hidden = 60\n",
-    "n_layers = 1\n",
-    "```\n",
-    "\n",
-    "You usually don't want to log anything onto WandB when testing your implementation.\n",
-    "To deactivate WandB without having to change any line of code, you can type `!wandb offline` in a cell.\n",
-    "\n",
-    "Once you have rightly implemented the models, you can train bigger models on bigger datasets.\n",
-    "When you do this, do not forget to change the runtime as GPU (and use `!wandb online`)!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "WriScTUEsRHr",
-    "outputId": "13decc88-8257-4ae2-abcc-b694d2f2df3b"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Logging into wandb.ai. (Learn how to deploy a W&B server locally: https://wandb.me/wandb-server)\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: You can find your API key in your browser here: https://wandb.ai/authorize\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Paste an API key from your profile and hit enter, or press ctrl+c to quit: \n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: No netrc file found, creating one.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mgaetan-butault-poly\u001b[0m (\u001b[33mpolytri\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
-      "Mon Mar 24 14:30:04 2025       \n",
-      "+-----------------------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
-      "|-----------------------------------------+------------------------+----------------------+\n",
-      "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                                         |                        |               MIG M. |\n",
-      "|=========================================+========================+======================|\n",
-      "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-      "| N/A   34C    P8              9W /   70W |       2MiB /  15360MiB |      0%      Default |\n",
-      "|                                         |                        |                  N/A |\n",
-      "+-----------------------------------------+------------------------+----------------------+\n",
-      "                                                                                         \n",
-      "+-----------------------------------------------------------------------------------------+\n",
-      "| Processes:                                                                              |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-      "|        ID   ID                                                               Usage      |\n",
-      "|=========================================================================================|\n",
-      "|  No running processes found                                                             |\n",
-      "+-----------------------------------------------------------------------------------------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Checking GPU and logging to wandb\n",
-    "\n",
-    "!wandb login\n",
-    "\n",
-    "!nvidia-smi"
+    "            torch.save(grads_moy, path/f'grads_moy_epoch_{e}.pth')\n",
+    "            torch.save(grads_epoch_start, path/f'grads_epoch_start_epoch_{e}.pth')"
    ]
   },
   {
@@ -1905,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "id": "XLYsL2F5XkQL"
    },
@@ -1941,7 +1830,7 @@
     "    'src_pad_idx': train_dataset.en_vocab['<pad>'],\n",
     "    'tgt_pad_idx': train_dataset.fr_vocab['<pad>'],\n",
     "    'seed': 0,\n",
-    "    'log_every': 50,  # Number of batches between each wandb logs\n",
+    "    'log_every': 50,\n",
     "}\n",
     "\n",
     "\n"
@@ -2002,30 +1891,6 @@
     "      ignore_index=config['tgt_pad_idx'],  # We do not have to learn those\n",
     "  )\n",
     "  return model, config, weight_classes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "lSwK9lVNa1II",
-    "outputId": "7290c5d2-01b3-495c-b395-2f288ea049c8"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W&B disabled.\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "!wandb disabled  # online / offline / disabled to activate, deactivate or turn off WandB logging"
    ]
   },
   {
@@ -2250,13 +2115,7 @@
     "  model, config, weight_classes = build_model(copy.deepcopy(base_config), clspre, clspost)\n",
     "  print(f\"training with: {name}\")\n",
     "  time1 = time.time()\n",
-    "  with wandb.init(\n",
-    "          config=config,\n",
-    "          project=f'INF8225 - TP3 - experiment {name}',  # Title of your project\n",
-    "          group='Transformer - small',  # In what group of runs do you want this run to be in?\n",
-    "          save_code=True,\n",
-    "      ):\n",
-    "    train_model(model, config)\n",
+    "  train_model(model, config, name)\n",
     "  print(\"training time: \", time.time()-time1)\n",
     "  print(\"-\"*25)"
    ]
